--- a/post-service.properties
+++ b/post-service.properties
@@ -6,3 +6,7 @@ management.endpoints.web.exposure.include=*
 spring.datasource.url: jdbc:mysql://localhost:3306/post?useSSL=false&serverTimezone=US/Central&allowPublicKeyRetrieval=true
 spring.datasource.username: root
 spring.datasource.password: rootroot
+
+spring.datasource.driver-class-name: com.mysql.jdbc.Driver
+
+spring.datasource.initialization-mode=always
