--- a/post-service.properties
+++ b/post-service.properties
@@ -7,5 +7,8 @@ spring.datasource.url: jdbc:mysql://localhost:3306/post?useSSL=false&serverTimez
 spring.datasource.username: root
 spring.datasource.password: rootroot
 
+spring.jpa.hibernate.ddl-auto=create
+
+spring.jpa.show-sql=true
 
 spring.datasource.initialization-mode=always
