--- a/post-service.properties
+++ b/post-service.properties
@@ -10,4 +10,4 @@ spring.datasource.password: rootroot
 spring.jpa.hibernate.ddl-auto=create
 
 
-spring.datasource.initialization-mode=always
+#spring.datasource.initialization-mode=always
