--- a/comment-service.properties
+++ b/comment-service.properties
@@ -3,6 +3,14 @@ server.port=6868
 # allow for RefreshScope
 management.endpoints.web.exposure.include=*
 
-spring.datasource.url: jdbc:mysql://localhost:3306/comment?useSSL=false&serverTimezone=US/Central&allowPublicKeyRetrieval=true
-spring.datasource.username: root
-spring.datasource.password: rootroot
+spring.application.name=post-service
+
+spring.datasource.url=jdbc:h2:file:./commentDB
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=create
+
+spring.datasource.initialization-mode=always
