--- a/comment-service.properties
+++ b/comment-service.properties
@@ -5,12 +5,17 @@ management.endpoints.web.exposure.include=*
 
 spring.application.name=post-service
 
-spring.datasource.url=jdbc:h2:file:./commentDB
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=password
+#spring.datasource.url=jdbc:h2:file:./commentDB
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.username=sa
+#spring.datasource.password=password
 
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+spring.datasource.url: jdbc:mysql://localhost:3306/comment?useSSL=false&serverTimezone=US/Central&allowPublicKeyRetrieval=true
+spring.datasource.username: root
+spring.datasource.password: rootroot
+
 spring.jpa.hibernate.ddl-auto=create
 
 spring.datasource.initialization-mode=always
